Fix spacing between image and form on contact page

--- a/src/app/contact/page.module.css
+++ b/src/app/contact/page.module.css
@@ -6,12 +6,14 @@
 
 .container {
 	display: flex;
+	justify-content: space-between;
 	align-items: center;
 	gap: 40px;
 }
 
 .image {
-	width: 100%;
+	max-width: 100%;
+	height: auto;
 	object-fit: contain;
 	flex-shrink: 1;
 	border-radius: 5px;
@@ -30,8 +32,5 @@
 @media(max-width: 700px) {
 	.container {
 		flex-direction: column;
-	}
-	.container form {
-		width: 100%;
 	}
 }
